ocp-code/example-03/overlays/prod/patch-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app 
  namespace: test-argocd-03
spec:
  replicas: 5
