ocp-code/example-03/overlays/prod/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: test-app
  name: test-app
  namespace: test-argocd-03
spec:
  host: "prod.apps.ocp4-mng.example.com"
  port:
    targetPort: 8080
  to:
    kind: Service
    name: prod-test-app
    weight: 100
status:
  ingress:
  - conditions:
    - status: "True"
      type: Admitted
